# rim

./: .gitignore  Cargo.toml  LICENSE  README.md  test.txt
src/: editor.rs  main.rs
src/editor/: editorcommand.rs  terminal.rs  view.rs
src/editor/view/: buffer.rs  line.rs  location.rs
